--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+.ansible
+tmp/
+secret*
+generated_files/
+*.log
+*.raw
+*.qcow2
+*.gz
+
+tfplan*
+
 # Local .terraform directories
 .terraform/
 
@@ -10,8 +21,8 @@ crash.log
 crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
