--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,10 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore Ansible dynamic files
+inventory/*/hosts.ini
+
+# Ignore any specific secret files
+*.secret
+.env
